Licensor Page: Revision History grid alignment fixes

--- a/components/page-licensor/page-licensor.less
+++ b/components/page-licensor/page-licensor.less
@@ -6,7 +6,7 @@
 
   table{
     th:last-child{padding-right:15px;}
-    .verNo, .version, .validFrom, .validTo, .id {text-align:right !important;}
+    .verNo, .version, .id {text-align:right !important;}
   }
 
   overflow-x: hidden;
@@ -116,7 +116,7 @@
 
   .col-sm-12.societyContacts {
     height: 137px;
-    width: 98%;
+    width: 99%;
     overflow: hidden;
     padding-right: 0px;
     border-radius: 0 5px 0 0;
@@ -251,9 +251,10 @@
   div#revisionHistory {
 
       width: 97%;
-      max-height: 6.250em;
+      max-height: 9.250em;
       padding: 0px;
-      padding-left: 15px;
+      margin-left: 15px;
+      overflow-x:auto;
   }
 
   div.repConfiguration {
@@ -346,7 +347,8 @@
       border-color: #0A66CB #0A66CB #0A66CB;
       filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
       border-radius: 6px !important;
-      width:76px;
+      padding: 3px 0 !important;
+      width: 76px;
     }
 
     .btn-custom-small-cancel {
@@ -355,7 +357,8 @@
       border-color: #848484 #848484 #848484;
       background-image: linear-gradient(to bottom, #7e7e83, #afafb4);
       border-radius: 0.375em !important;
-      padding: 0.375em 1.375em !important;
+      padding: 3px 0 !important;
+      width: 76px;
     }
 
     .btn-custom-small3px {
